--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">DistanceTrackerApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="continue_text">Continue</string>
+    <string name="permission_description">Lorem ipsum dsajkdlasjdfkljfewiofwopdvkdsop[viwkovajepvjrijver[nvroianvornfionqweofnowefnowefnwe</string>
+    <string name="permission_required">Permission Required</string>
+
 </resources>
