Add google map api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="continue_text">Continue</string>
     <string name="permission_description">Lorem ipsum dsajkdlasjdfkljfewiofwopdvkdsop[viwkovajepvjrijver[nvroianvornfionqweofnowefnowefnwe</string>
     <string name="permission_required">Permission Required</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_maps2">MapsActivity2</string>
 
 </resources>
