Implement logic and handle UI to send data from maps fragment to result fragment when stop foreground service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="distance">Distance</string>
     <string name="time">time</string>
     <string name="share">share</string>
+    <string name="result">%1$s km</string>
 
 </resources>
